# nsu-os

./: CMakeLists.txt  README.md
labs-1/: CMakeLists.txt
labs-1/lab1/src/: commands.c  commands.h  main.c  source.c  source.h
labs-1/lab2/src/: main.c
labs-1/lab2_os/: main.c
labs-1/lab3/src/: main.c
labs-1/lab4/src/: list.c  list.h
labs-1/lab4_os/: list.c  list.h  main.c
labs-1/lab5/: file.txt
labs-1/lab5/src/: main.c  source.c  source.h
labs-1/lab9/: file.txt
labs-1/lab9/src/: main.c
labs-2/lab1/: lab1.c  main.c
labs-2/lab10/: error_handling.c  error_handling.h  lab10.c  lab10_source.c  lab10_source.h
labs-2/lab14/: error_handling.c  lab14.c  lab14_source.c  lab14_source.h
labs-2/lab2/: lab2.c  main.c
labs-2/lab24/: error_handling.c  lab24.c  lab24_source.c  lab24_source.h  lab24_source_threads_tasks.c
labs-2/lab8/: lab8.c  lab8_source.c  lab8_source.h  mythreadlib.c  mythreadlib.h
labs-2/mylib/: error_handling.c  error_handling.h  mylib.c  mylib.h
